src/test/ui/issues/issue-28576.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-28576.rs:7:12
   |
LL |   pub trait Bar: Foo<Assoc=()> {
   |             ---  -------------
   |             |    |   |
   |             |    |   ...because it uses `Self` as a type parameter in this
   |             |    ...because it uses `Self` as a type parameter in this
   |             this trait cannot be made into an object...
LL |       fn new(&self, b: &
LL | /            dyn Bar
LL | |               <Assoc=()>
   | |________________________^ the trait `Bar` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
